@@ -1,7 +1,7 @@
 #
 # spec file for package qjackctl
 #
-# Copyright (C) 2003-2019, rncbc aka Rui Nuno Capela. All rights reserved.
+# Copyright (C) 2003-2020, rncbc aka Rui Nuno Capela. All rights reserved.
 #
 # All modifications and additions to the file contributed by third parties
 # remain the property of their copyright owners, unless otherwise agreed
@@ -78,6 +78,8 @@ including a enhanced patchbay and connection control features.
 %dir %{_datadir}/icons/hicolor
 %dir %{_datadir}/icons/hicolor/32x32
 %dir %{_datadir}/icons/hicolor/32x32/apps
+%dir %{_datadir}/icons/hicolor/scalable
+%dir %{_datadir}/icons/hicolor/scalable/apps
 %dir %{_datadir}/%{name}
 %dir %{_datadir}/%{name}/translations
 %dir %{_datadir}/metainfo
@@ -86,6 +88,7 @@ including a enhanced patchbay and connection control features.
 %{_bindir}/%{name}
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/icons/hicolor/32x32/apps/%{name}.png
+%{_datadir}/icons/hicolor/scalable/apps/%{name}.png
 %{_datadir}/%{name}/translations/%{name}_*.qm
 %{_datadir}/metainfo/%{name}.appdata.xml
 %{_datadir}/man/man1/%{name}*.1.gz
